# rested

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .sublime-project  .travis.yml  LICENSE  README.md  pyproject.toml  pytest.ini  tox.ini
rested/: __init__.py  client.py  errors.py  http.py  integration.py  method.py  new.py  resource.py
rested/auth/: auth.py  credentials.py
tests/: conftest.py  test_authentication.py  test_client.py  test_integration.py  test_resource.py  test_rested.py
tests/resources/: test_configuration.toml
