[tool.poetry]
name = "rested"
version = "0.0.2"
description = "A generic RESTful HTTP Client Framework"
authors = ["Henry Marment <henrymarment@gmail.com>"]

[tool.poetry.dependencies]
python = "~2.7 || ^3.4"
requests = "^2.21"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.7"
pycodestyle = "^2.5"
autoenv = "^1.0"
pytest-cov = "^2.6"
tox = "^3.7"
black = { version = "^18.9b0", python = "^3.6" }
pytest-mock = "^1.10"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
